Adjusting the config.ini file only a few comments

--- a/Reports_2_compile/Config/config.ini
+++ b/Reports_2_compile/Config/config.ini
@@ -1,10 +1,13 @@
-# Becarefull with the spaces here.
-# Make sure after editing that there is no space after the "," or before it
-# Take a look on how this file is now before editing. 
-# ALWAYS MAKE A BKP FILE before editing the configuration if you need to change something.
+#CONFIG FILE 
+#config.ini
+
+#Becarefull with the spaces here.
+#Make sure after editing that there is no space after the "," or before it
+#Take a look on how this file is now before editing. 
+#ALWAYS MAKE A BKP FILE before editing the configuration if you need to change something.
 
 [PARAMS]
-#set headers to jump on cummulative table.
+#Set of headers to jump on cummulative table.
 CUMULATIVE_HEADERS= 8
 SVP_HEADERS= 4
 PDF_PAGE_SOURCE_POINT= 0
@@ -13,7 +16,8 @@ PDF_PAGE_SOURCE_POINT= 0
 SEARCH_TEXT1= Chargeable SPs
 SEARCH_TEXT2= Shot Statistics
 
-# FOR NODE VESSEL DEPLOYED AND RECOVERED NODES DAILY
+#FOR NODE VESSEL DEPLOYED AND RECOVERED NODES DAILY
+#REGEX AND NAMING FOR THE DPR EMAIL CLASS TO FIND THE DAILY SHOTS AND NODES
 SEARCH_TEXT3= Receiver Activity
 SEARCH_TEXT4= Daily
 PERIOD_INDEX_FIND= Period
@@ -22,84 +26,93 @@ DEPLOYED_DAILY_REGEX= Daily\s+(\d+)
 RECOVERED_DAILY_REGEX= Daily\s+\d+\s+(\d+)
 
 [PATHS]
-# THE PATHS BELOW ARE ESSENTIAL FOR THE SOFTWARE TO WORK. IF YOU CHANGE YOU WILL NEED TO CREATE THE DIRECTORIES BEOFRE RUNING THE PROJECT
+#THE PATHS BELOW ARE ESSENTIAL FOR THE SOFTWARE TO WORK. IF YOU CHANGE YOU WILL NEED TO CREATE THE DIRECTORIES BEOFRE RUNING THE PROJECT
+#MOSTLIKELY IF ANYTHING FAILS IN THE SOFTWARE IS BECAUSE SOME OF THESE PATHS BELOW ARE MISSING OR WRONG. MOSTLY THE CUMULATIVE TABLE.
+#IF ANY NAME CHANGES< IF SURVEYOR CHANGES ANY NAMING FROM THEIR SHEETS YOU NEED TO CHANGE IT HERE TOO. USUALLY THEY DONT.
 
-# CUMMULATIVE TABLE PATH
-# Path where the Surveyors put the Cumulative table.
+#CUMMULATIVE TABLE PATH
+#Path where the Surveyors put the Cumulative table.
 CUMMULATIVE_SOURCE_FILE= Z:\06_SURVEY\Production\MT1004723_CumulativeCSV_Client.csv
-# Path where we copy the Cumulative table to work on it.
+#Path where we copy the Cumulative table to work on it.
 CUMMULATIVE_COPIED_FILE= C:\Users\mta1.nv1.qccnslt\Documents\QC\Cumulative\MT1004723_CumulativeCSV_Client.csv
 
-# REPORT DESTINATION PATHS
-# Defining destination paths for each report
-#Paths for Todays and Yesterdays Production Deployment and Recovery 
+#REPORT DESTINATION PATHS
+#Defining destination paths for each report
+#Paths for Todays and Yesterdays Production Deployment and Recovery Reports (This will be Uploaded in Check Point)
 TOVERI_REPORTS_PATH= C:\Users\mta1.nv1.qccnslt\Desktop\
-#Paths for Reports Created by a date filter for Production Deployment and Recovery
+#Paths for Reports Created by a date filter for Production Deployment and Recovery (In case you need to regenerate a report for a specific day)
 TOVERI_REPORTS_BY_DATE_PATH= C:\Users\mta1.nv1.qccnslt\Documents\QC\Cumulative\Created_Reports\
-#Paths for PBR Spread sheets for a given date filtered only for that date
+#Paths for PBR Spread sheets for a given date filtered only for that date (This you will send to PBR)
 PBR_REPORTS_PATH= C:\Users\mta1.nv1.qccnslt\Desktop\PBR_Production\
 
-# SVP PATHS
-# Path where the Surveyors put the SVP LOG table
+#SVP PATHS
+#Path where the Surveyors put the SVP LOG table 
 SVP_SOURCE_FILE= Z:\06_SURVEY\06_SVP\BR004723_Buzios_M1_Petrobras\Deliverable\SVP_LOG.xlsx
-# Path where we copy the SVP so QGIS reads from here
+#Path where we copy the SVP so QGIS reads from here
 SVP_DESTINATION_FILE= C:\Users\mta1.nv1.qccnslt\Documents\004723-Buzios-Monitor\Final Report\A.4 Node Data\A.4.4 SVP\SVP_LOG.csv
 
-# PIES PATH
-# Path where the Surveyors put the PIES LOG table.
+#PIES PATH
+#Path where the Surveyors put the PIES LOG table.
 PIES_SOURCE_FILE= Z:\06_SURVEY\18.PIES\PIES_FOLLOW_UP_Buzios_M1.csv 
-# Path where we copy the PIES so QGIS reads from here.
+#Path where we copy the PIES so QGIS reads from here.
 PIES_DESTINATION_FILE= C:\Users\mta1.nv1.qccnslt\Documents\004723-Buzios-Monitor\Final Report\A.4 Node Data\A.4.5 PIES\PIES_LOG.csv
 
 #OPERATION EVENTS
-# Path where we copy the Operational Events from Daily log.
+#Path where we copy the Operational Events from Daily log.
 INPUT_VENTS= C:\Users\mta1.nv1.qccnslt\Desktop\Operational_Events.xlsx
-# Path For the Activity Summary to be import to CheckPoint
+#Redundant (But if you change this change the above too path to be the same just in case)
+OPERATIONAL_EVENTS_TABLE= C:\Users\mta1.nv1.qccnslt\Desktop\Operational_Events.xlsx 
+#Path For the Activity Summary to be import to CheckPoint ( This is what we use to import the Daily Activities to CP)
 ACTIVITIES_VENTS= C:\Users\mta1.nv1.qccnslt\Desktop\Activities_Events.xlsx
-# Path For the Operational Events Summarized to be import to CheckPoint
+#Path For the Operational Events Summarized to be import to CheckPoint (This is what we use to import the Events to CP)
 SUMMARY_EVENTS= C:\Users\mta1.nv1.qccnslt\Desktop\Summary_Operation_Events.xlsx
-# Path For the Daily Log Events to be copied 
+#Path For the Daily Log Events to be copied (Where the Raw daily logs from Surveyors are placed. 
+#Look into this to x-check with the above summaries)
 DAILY_LOG_PATH= Z:\06_SURVEY\00.Daily_Log
-OPERATIONAL_EVENTS_TABLE= C:\Users\mta1.nv1.qccnslt\Desktop\Operational_Events.xlsx
-# Path for QGIS of current project for All nodes Deploy and Recovery
-QGIS_DEPLOY_RECOVERY_PATH = C:\Users\mta1.nv1.qccnslt\Documents\004723-Buzios-Monitor\QGIS\Deploy_Recovered_All\
+#Path for QGIS of current project for All nodes Deploy and Recovery 
+#(All the Deployed and Recovered nodes spread sheets will be placed in this path, use this to load into QGIS)
+QGIS_DEPLOY_RECOVERY_PATH= C:\Users\mta1.nv1.qccnslt\Documents\004723-Buzios-Monitor\QGIS\Deploy_Recovered_All\
 
 [COLUMNS]
-# TOVERI CONFIGURATION
+#TOVERI CONFIGURATION
 
-# Columns for Toveri Usage
-# Defining Columns for Deployment Table and Recovery table for Toveri Formt to be Used on Check Point
+#Columns for Toveri Usage
+#Defining Columns for Deployment Table and Recovery table for Toveri Formt to be Used on Check Point
 TOVERI_DEPLOYMENT_COLUMNS= Date,Line,Point,Index,NodeCode,Time,Deployed by ROV
 TOVERI_RECOVERY_COLUMNS= Date,Line,Point,Index,NodeCode,Time,Recovered by ROV
 
-# PBR CONFIGURATION
-# Columns for PBR Usage
-# Defining Columns for Deployment Table or Recovery table for Pbr Format as they required
+#PBR CONFIGURATION
+#Columns for PBR Usage
+#Defining Columns for Deployment Table or Recovery table for Pbr Format as they required
 
-# Those are the columns PBR will use with the names on the cumulative table for deployment, the name must be equal on the cumulative table.
+#Those are the columns PBR will use with the names on the cumulative table for deployment, the name must be equal on the cumulative table.
 PBR_DEPLOYMENT_COLUMNS= Date,Time,Line,Point,NodeCode,Index,Aslaid Easting,Aslaid Northing,BLANK,BLANK,Aslaid Depth,Deployed by ROV,Aslaid Azimuth,Deployed EastingSD USBL,Deployed NorthingSD USBL,BLANK,DeployedComments
-# Thos are the columns PBR will use with the names on the cumulative table for deployment, the name must be equal on the cumulative table.
+#Thos are the columns PBR will use with the names on the cumulative table for deployment, the name must be equal on the cumulative table.
 PBR_RECOVERY_COLUMNS= Date,Time,Line,Point,NodeCode,Index,Recovered Easting,Recovered Northing,BLANK,BLANK,Recovered Depth,Recovered by ROV,Recovered Azimuth,Recovered EastingSD USBL,Recovered NorthingSD USBL,BLANK,RecoveredComments
-# Renamed Names for columns that PBR uses on their format.
+#Renamed Names for columns that PBR uses on their format.
 PBR_RENAMED_COLUMNS= Date,Time,RL,RP,RU,Event,Easting,Northing,,,Depth,ROV,Heading,Std Dev X,Std Dev Y,,Comments
-# A blank Column to use on PBR format, dont change here. IF you need to Add blank columns add the name BLANK on the above columns format.
+#A blank Column to use on PBR format, dont change here. IF you need to Add blank columns add the name BLANK on the above columns format.
 BLANK_COLUMNS= 
 
-# PIES COLUMNS FORMAT
+#PIES COLUMNS FORMAT
 COLLUMNS_TO_USE_ON_PIES_FILE= PIES,Acoustic Adress,Deployment date and time,Deployed Easting,Deployed Northing,Deployed Depth,Recovery Date and Time 
 COLLUMNS_RENAMED_TO_USE_IN_QGIS= PIES location,Line position,row_position,PIES acoustic address,Date and time,Easting,Northing,Depth,Recovery date
 
-# QGIS COLUMNS FORMAT
+#QGIS COLUMNS FORMAT
 DEPLOYED_ALL_COLUMNS_4_QGIS_NODES= Line,Point,Aslaid Easting,Aslaid Northing,Aslaid Depth
 RECOVERY_ALL_COLUMNS_4_QGIS_NODES= Line,Point,Recovered Easting,Recovered Northing,Recovered Depth
 
 [REMARKS]
-# Remarks used to grab the coments from the Daily log. If you feel tha some coments are been missing add then here don't put spaces after the ","
-important_remarks = PIES ,UHD64 ,XLX19 ,UHD-64 ,XLX-19 ,deployed,recovered,outside 1500m zone,inside 1500m zone,XLX19 deployed,XLX19 deploys,UHD64 deploys,UHD64 deployed,recovers last node,recovers first node,lost comms,T4,failure,overheating,reboot systems,arm,check systems,suction hose,replaced,tested,maintenance,helicopter,fault finding,system maintenance,bleed air,bleed air from compensator,compensator,returning to deck,not functioning,deploys first node of SKID,suction pump,Dunker,grabs PIES,PIES,issue with Hipap,Hipap,Bridge report,function test,hard reset,to view assist,heading to TMS,shutting down power,loose,loosing,lose power,loosing power,camera,deployed tilted,Un-tilting node,untilts,report issue,issue,following tether,tether,UHD64 deploys first node of SKID,XLX19 deploys node,UHD64 deploys last node of SKID,UHD64 deploys node,XLX19 deploys last node of SKID,Port Basket in,XLX19 deploys node,Weather Wind,XLX19 docked in to,XLX19 undocked from basket,UHD64 docked in to basket,UHD64 undocked from basket,to assist
-exclude_remarks = Port Basket in the water,Starboard Basket in the water,Dunker in the water,PIES Unhooked,PIES in the water,Dunker out of water,Port Basket out the water
+#Remarks used to grab the coments from the Daily log. If you feel tha some coments are been missing add then here don't put spaces after the ","
+important_remarks= PIES ,UHD64 ,XLX19 ,UHD-64 ,XLX-19 ,deployed,recovered,outside 1500m zone,inside 1500m zone,XLX19 deployed,XLX19 deploys,UHD64 deploys,UHD64 deployed,recovers last node,recovers first node,lost comms,T4,failure,overheating,reboot systems,arm,check systems,suction hose,replaced,tested,maintenance,helicopter,fault finding,system maintenance,bleed air,bleed air from compensator,compensator,returning to deck,not functioning,deploys first node of SKID,suction pump,Dunker,grabs PIES,PIES,issue with Hipap,Hipap,Bridge report,function test,hard reset,to view assist,heading to TMS,shutting down power,loose,loosing,lose power,loosing power,camera,deployed tilted,Un-tilting node,untilts,report issue,issue,following tether,tether,UHD64 deploys first node of SKID,XLX19 deploys node,UHD64 deploys last node of SKID,UHD64 deploys node,XLX19 deploys last node of SKID,Port Basket in,XLX19 deploys node,Weather Wind,XLX19 docked in to,XLX19 undocked from basket,UHD64 docked in to basket,UHD64 undocked from basket,to assist
+exclude_remarks= Port Basket in the water,Starboard Basket in the water,Dunker in the water,PIES Unhooked,PIES in the water,Dunker out of water,Port Basket out the water
 
 [EVENT_NAMES]
-# Events numbering on the Daily log. Before the "=" sign are the Events type that Surveyor categorize their operation and events. After the "=" are the events as it is written in CheckPoint. All here must be equally written in both Daily log form surveyor and CheckPoint Events Activities.
+#Events numbering on the Daily log. Before the "=" sign are the Events type that Surveyor categorize their operation and events. 
+#After the "=" are the events as it is written in CheckPoint. All here must be equally written in both Daily log form surveyor and CheckPoint Events Activities.
+#You can change below if surveyors change something from their logs, or if you want to map a diferent activity name for a number.
+#Surveyor daily logs are her Z:\06_SURVEY\00.Daily_Log\
+#Events (Maped from the Surveyor daily logs) = Activity Name (This is the same name for the Activitys in CP)
 1.1.2 = Operational: Deploying Nodes Dual ROV
 1.1.1 = Operational: Deploying Nodes Single ROV
 1.2.1 = Operational: Recovering Nodes Single ROV
@@ -133,7 +146,9 @@ exclude_remarks = Port Basket in the water,Starboard Basket in the water,Dunker 
 64.2.2 = UHD64 recovered last node	
 
 [EMAIL]
-# Below is all the configuration you need for the Button 'Create DPR Email' to work
+#Below is all the configuration you need for the Button 'Create DPR Email' to work
+#This will build your template email, so change as you wish. 
+#Comment and uncomment the signature to change it.
 pdf_file = C:\Users\mta1.nv1.qccnslt\Documents\004723-Buzios-Monitor\Final Report\A.2 Toveri DPR
 project_name = 4D-Buzios-M1
 node_boat_name = Siem Dorado
@@ -142,11 +157,14 @@ gun_boat_name = Artemis Odyssey
 gun_boat_letters = AOD
 chase_vessel_name = LH-Comandante
 email_list_file = C:\\Users\\mta1.nv1.qccnslt\\Desktop\\email_list.csv
-# Signature to be used. Just comment or uncomment if you need to change
+#Signature to be used. Just comment or uncomment if you need to change 
+#Create a signature in outlook first and then put below as followed signature_name = YOUR NAME (just as below)
 signature_name = Felipe.htm
 #signature_name = Priscila.htm 
+#signature_name = Tatiana.htm
 
 [EMAIL_TEMPLATE]
-# For teh email_body below change only what is outside the {}. The tags: <br><br> means a blank line as a space. If you want to jump one line only(line break) and keep previous line on top with no blank line as space use one <br> tag.
+#For teh email_body below change only what is outside the {}. The tags: <br><br> means a blank line as a space. 
+#If you want to jump one line only(line break) and keep previous line on top with no blank line as space use one <br> tag.
 email_body = Bom dia,<br><br>Em anexo DPR de {formatted_date}.<br><br>{node_boat_name}<br>Total de nodes depositados: {deployed_nodes_day}<br>Total de nodes recolhidos: {recovered_nodes_day}<br>No momento, {node_boat_letters}<br><br>{gun_boat_name}<br>Total de SP válidos adquiridos: {shot_points}<br>No momento, {gun_boat_letters}<br><br>{chase_vessel_name} acompanhando AOD
 
